Add paper outline

--- a/paper/hw2.tex
+++ b/paper/hw2.tex
@@ -14,8 +14,19 @@
 
 \section{The Problem}\label{sec:problem}
 
-\section{Solution Strategy}\label{sec:strategy}
+\section{Solution Strategies}\label{sec:strategies}
+
+\subsection{Simulated Annealing}\label{sec:strat:simulated-annealing}
+\subsection{A Plain Evolutionary Algorithm}\label{sec:strat:evolutionary-algorithm}
+\subsection{Circle by Circle}\label{sec:strat:circle-by-circle}
+\subsection{A Combined Approach}\label{sec:strat:combined-approach}
 
 \section{Results}\label{sec:results}
+
+\subsection{A Plain Evolutionary Algorithm}\label{sec:results:evolutionary-algorithm}
+\subsection{Circle by Circle}\label{sec:results:circle-by-circle}
+\subsection{A Combined Approach}\label{sec:results:combined-approach}
+
+\section{Conclusion}
 
 \end{document}
