Riley lied to me about the number of layers

--- a/paper/hw2.tex
+++ b/paper/hw2.tex
@@ -891,8 +891,8 @@ effectively blur the image. In reality, the opposite happened.
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{output/average64_c400p10g50l64.png}
-    \caption{64 composite layers with population of 10, 400 circles, and 50
-        generations}\label{fig:composite-64-10}
+    \caption{128 composite layers with population of 128, 400 circles, and 50
+        generations}\label{fig:composite-128}
 \end{figure}
 
 The larger number of total circles in the end composite image produced the best approximation.
